<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.iancl.mywallet.activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_changeDevise"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_legal"
        android:orderInCategory="300"
        android:title="@string/about_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_help"
        android:orderInCategory="400"
        android:title="@string/help_title"
        app:showAsAction="never" />


</menu>
