<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/black_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="" />

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textColor="@color/colorAccentBis"
        />

    <TextView
        android:id="@+id/header_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textColor="@color/colorAccentBis"
/>

    <TextView
        android:id="@+id/header_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:paddingRight="15dp"
        android:text="@string/sold"
        android:textAlignment="center"
        android:textColor="@color/colorAccentBis" />
</LinearLayout>
